# toast-engine

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .ignore  .luarc.json  CMakeLists.txt  CMakePresets.json  CNAME  Doxyfile  LICENSE  PHYSICS_REWRITE_TODO.md  README.md  Renderer.settings  annotated.html  annotated_dup.js  clang-tools.lua  classes.html  compile.lua  compile.sh  concepts.html  concepts.js  debug_shape.slang  demo.tnode  dir_000000_000012.html  dir_000001_000006.html  dir_000001_000010.html  dir_000002_000021.html  dir_000002_000024.html  dir_000002_000025.html  dir_000003_000000.html  dir_000003_000008.html  dir_000003_000010.html  dir_000003_000023.html  dir_000003_000027.html  dir_000006_000010.html  dir_000008_000005.html  dir_000008_000006.html  dir_000008_000016.html  (+555 more)
editor/Assets/files/lib/: CMakeLists.txt
editor/Resources/files/lib/: CMakeLists.txt
engine/: .gitignore  CMakeLists.txt  pch.h  xmake.lua
engine/assets/lua/: math.d.lua  node.d.lua  toast.d.lua
engine/assets/lua/examples/: follower.lua  hud_controller.lua  inspector_showcase.lua  pause_controller.lua  rotator.lua
engine/assets/material/: default.tmat
engine/assets/meshes/: Capsule.tmesh  Cube.tmesh  Cylinder.tmesh  Plane.tmesh  Skybox.tmesh  Sphere.tmesh  Toast.tmesh
engine/assets/schemas/: action.schema.json  audio.schema.json  color_scheme.schema.json  core.schema.json  curve.schema.json  font_family.schema.json  haptic.schema.json  input_settings.schema.json  layout.schema.json  material.schema.json  project_settings.schema.json
engine/assets/shaders/: mesh.slang  toast.slang  triangle.slang  ui.slang  ui_effects.slang  ui_world.slang
engine/assets/ui/examples/: hud.rcss  hud.rml  pause_menu.rcss  pause_menu.rml  world_sign.rml
engine/ffi/: audio.h  engine.h  events.h  export.h  gltf_importer.h  log.h
engine/include/toast/: application.hpp  engine.hpp  export.hpp  log.hpp  thread_pool.hpp  󰙲 application.hpp
engine/include/toast/events/: event.hpp  event.inl  listener.hpp
engine/rust/: Cargo.toml  xmake.lua
engine/rust/.cargo/: config.toml
engine/rust/hello/: Cargo.toml
engine/rust/hello/src/: lib.rs
engine/rust/log-server/: Cargo.toml  build.rs  test.py
engine/rust/log-server/src/: main.rs  server.rs
engine/src/: application.hpp  engine.cpp  engine.hpp  log.hpp  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp
engine/src/toast/: application.hpp  engine.cpp  engine.hpp  engine_defs.hpp  factory.cpp  factory.hpp  log.hpp  logger.cpp  logger.hpp  project_settings.cpp  project_settings.hpp  test_nodes.hpp  thread_pool.cpp  thread_pool.hpp  time.cpp  time.hpp  uid.cpp  uid.hpp  uri_handler.cpp  uri_handler.hpp
engine/src/toast/assets/: asset_field_access.hpp  asset_manager.cpp  asset_manager.hpp  asset_registry.cpp  asset_registry.hpp  assets.hpp  core_types.hpp  curve.cpp  curve.hpp  data.cpp  data.hpp  data_value.cpp  data_value.hpp  gltf_importer.cpp  gltf_importer.hpp  haptic.cpp  haptic.hpp  input_action.hpp  input_assets.cpp  input_layout.hpp  input_settings.hpp  material.cpp  material.hpp  material_instance.cpp  material_instance.hpp  mesh.cpp  mesh.hpp  node_file.cpp  node_file.hpp  (+13 more)
tests/: App.cpp  App.hpp  CMakeLists.txt  TestActor.hpp  TestRootNode.hpp  TestScene.hpp  test_registry.hpp  test_runner.cpp  xmake.lua
tests/assets/: 01-handle-callback.cpp
tests/dependency_graph/: 01_unconnected_nodes.cpp  02_linear_chain.cpp  03_branching.cpp  04_multiple_subgraphs.cpp  05_scc_cluster.cpp  06_pruning.cpp  07_stage_filtering.cpp  08_graphviz.cpp  dependency_graph_test_helpers.hpp
tests/dummy_game/: xmake.lua
tests/events/: 01-basic.cpp  01_basic.cpp  02-priority.cpp  03-consume.cpp  03_consume.cpp  04-named.cpp  05-arguments.cpp  05_arguments.cpp  06-nested.cpp  07-lifecycle.cpp  08-multiple.cpp  09-unsubscribe_all.cpp  10-concurrent_send.cpp  11-thread-listener.cpp  11_concurrent_poll.cpp
tests/input/: 01-keycodes.cpp  02-triggers.cpp  03-modifiers.cpp  04-assets.cpp  05-action.cpp  06-reflect_layouts.cpp  07-haptics.cpp
tests/node_file/: 01-from_file.cpp  02-to_file.cpp  03-to_binary.cpp  04-from_binary.cpp  05-uuid_binary.cpp  sample.hpp
tests/prefab_instancing/: 01-format_and_handle.cpp  02-instantiate.cpp  03-save.cpp  04-spawn.cpp  05-load_node.cpp  06-lua_var_persistence.cpp  prefab_test_helpers.hpp
tests/reflection/: 01-enum-field-access.cpp
tests/resources/: node_file.cpp
tests/scripting/: 01_schema_extraction.cpp  02_lua_tick_scheduling.cpp  03_vars_and_reload.cpp  scripting_test_helpers.hpp
tests/ui/: 01-csv.cpp  02-text_format.cpp  03-bind_store.cpp  04-document_preprocess.cpp  05-localization_and_paths.cpp
tests/uid/: 01-base64url.cpp
tests/world/: 01-camera_view.cpp  01-uuid.cpp  02-box.cpp  02-transform-serialization.cpp
tools/: CMakeLists.txt  xmake.lua
tools/ToastPacker/: Packer.cpp  Unpacker.cpp
tools/asset_packer/: CMakeLists.txt  Cargo.toml
tools/asset_packer/src/: pack.rs  pack_viewer.rs  packer.rs  unpacker.rs
tools/ci/: clang_format.ps1  clang_format.sh  clang_tidy.ps1  clang_tidy.sh
tools/dummy_game/: CMakeLists.txt  game.cpp  game.h
tools/imhex_patterns/: pak.hexpat  tbnode.hexpat  tmesh.hexpat
tools/kenzo/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
tools/kenzo/src/: app.rs  main.rs  proto.rs  tui.rs  ui.rs
tools/log-server/: Cargo.toml
tools/log-server/src/: main.rs
tools/log_server/: CMakeLists.txt  Cargo.toml  test.lua
tools/log_server/src/: main.rs  server.rs  storage.rs
tools/player/: CMakeLists.txt  application_layer.cs  dll_resolver.cs  player.csproj  program.cs  toast_engine.cs
tools/reflection_generator/: CMakeLists.txt  Cargo.toml  README.md  build.rs  ltreesitter.d.tl  main.lua  sample.hpp
tools/reflection_generator/src/: generator.rs  lib.rs  lua_stubs.rs  main.rs  node.rs  parser.rs
tools/reflection_generator/templates/: node.generated.hpp.jinja2  node.type_info.cpp.jinja2  reflect.generated.cpp.jinja2
tools/reflection_generator/tests/: common.rs  debug_parser.rs  debug_tree.rs  integration_test.rs  lua_stubs_test.rs
(+4460 files in other folders)
