[package]
name = "kenzo"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
prost = "0.13.5"
prost-types = "0.13.5"
csv = "1.3.1"
chrono = "0.4"
anyhow = "1.0"
tui-input = "0.11"
textwrap = "0.16"

[build-dependencies]
prost-build = "0.13.5"
