[package]
name = "kenzo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kenzo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
prost = "0.14"
prost-types = "0.13.5"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tui-input = "0.11"
