[package]
name = "log-server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14"
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[build-dependencies]
prost-build = "0.14"

