[package]
name = "log_server"
version = "0.1.0"
edition = "2021"

# This file is for LSP/IDE support only
# The project is built fully with xmake
# Do not use this file for actual compilation

[[bin]]
name = "log_server"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
