[package]
name = "log_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_server"
path = "src/main.rs"

[dependencies]
prost   = "0.14"
tokio   = { version = "1",     features = ["full"] }
clap    = { version = "4",     features = ["derive"] }
csv     = "1.3.1"
serde   = { version = "1",     features = ["derive"] }
chrono  = "0.4"